gen/PAMParser.py
# Generated from .\source\PAM.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class PAMParser ( Parser ):

    grammarFileName = "PAM.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'read'", "'write'", "':='", "'if'", 
                     "'then'", "'else'", "'fi'", "'while'", "'do'", "'end'", 
                     "','", "'('", "')'", "'AND'", "'OR'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'NOT'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "STRONGBOOL", 
                      "WEAKBOOL", "NEWLINE", "WEAKOP", "STRONGOP", "RELATION", 
                      "NUMBER", "NEG", "BOOL", "VARNAME", "WS" ]

    RULE_progr = 0
    RULE_series = 1
    RULE_stmt = 2
    RULE_input_stmt = 3
    RULE_output_stmt = 4
    RULE_assign_stmt = 5
    RULE_cond_stmt = 6
    RULE_loop = 7
    RULE_compar = 8
    RULE_varlist = 9
    RULE_expr = 10
    RULE_term = 11
    RULE_elem = 12
    RULE_logical_expr = 13
    RULE_logical_term = 14
    RULE_logical_elem = 15

    ruleNames =  [ "progr", "series", "stmt", "input_stmt", "output_stmt", 
                   "assign_stmt", "cond_stmt", "loop", "compar", "varlist", 
                   "expr", "term", "elem", "logical_expr", "logical_term", 
                   "logical_elem" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    STRONGBOOL=15
    WEAKBOOL=16
    NEWLINE=17
    WEAKOP=18
    STRONGOP=19
    RELATION=20
    NUMBER=21
    NEG=22
    BOOL=23
    VARNAME=24
    WS=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def series(self):
            return self.getTypedRuleContext(PAMParser.SeriesContext,0)


        def NEWLINE(self):
            return self.getToken(PAMParser.NEWLINE, 0)

        def getRuleIndex(self):
            return PAMParser.RULE_progr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgr" ):
                listener.enterProgr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgr" ):
                listener.exitProgr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgr" ):
                return visitor.visitProgr(self)
            else:
                return visitor.visitChildren(self)




    def progr(self):

        localctx = PAMParser.ProgrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_progr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.series()
            self.state = 33
            self.match(PAMParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeriesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PAMParser.StmtContext)
            else:
                return self.getTypedRuleContext(PAMParser.StmtContext,i)


        def getRuleIndex(self):
            return PAMParser.RULE_series

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeries" ):
                listener.enterSeries(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeries" ):
                listener.exitSeries(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeries" ):
                return visitor.visitSeries(self)
            else:
                return visitor.visitChildren(self)




    def series(self):

        localctx = PAMParser.SeriesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_series)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.stmt()
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PAMParser.T__0:
                self.state = 36
                self.match(PAMParser.T__0)
                self.state = 37
                self.stmt()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def input_stmt(self):
            return self.getTypedRuleContext(PAMParser.Input_stmtContext,0)


        def output_stmt(self):
            return self.getTypedRuleContext(PAMParser.Output_stmtContext,0)


        def assign_stmt(self):
            return self.getTypedRuleContext(PAMParser.Assign_stmtContext,0)


        def cond_stmt(self):
            return self.getTypedRuleContext(PAMParser.Cond_stmtContext,0)


        def loop(self):
            return self.getTypedRuleContext(PAMParser.LoopContext,0)


        def getRuleIndex(self):
            return PAMParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = PAMParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 48
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PAMParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.input_stmt()
                pass
            elif token in [PAMParser.T__2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.output_stmt()
                pass
            elif token in [PAMParser.VARNAME]:
                self.enterOuterAlt(localctx, 3)
                self.state = 45
                self.assign_stmt()
                pass
            elif token in [PAMParser.T__4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 46
                self.cond_stmt()
                pass
            elif token in [PAMParser.T__8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 47
                self.loop()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Input_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(PAMParser.VarlistContext,0)


        def getRuleIndex(self):
            return PAMParser.RULE_input_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInput_stmt" ):
                listener.enterInput_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInput_stmt" ):
                listener.exitInput_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInput_stmt" ):
                return visitor.visitInput_stmt(self)
            else:
                return visitor.visitChildren(self)




    def input_stmt(self):

        localctx = PAMParser.Input_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_input_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(PAMParser.T__1)
            self.state = 51
            self.varlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Output_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(PAMParser.VarlistContext,0)


        def getRuleIndex(self):
            return PAMParser.RULE_output_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutput_stmt" ):
                listener.enterOutput_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutput_stmt" ):
                listener.exitOutput_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutput_stmt" ):
                return visitor.visitOutput_stmt(self)
            else:
                return visitor.visitChildren(self)




    def output_stmt(self):

        localctx = PAMParser.Output_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_output_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(PAMParser.T__2)
            self.state = 54
            self.varlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(PAMParser.VARNAME, 0)

        def logical_expr(self):
            return self.getTypedRuleContext(PAMParser.Logical_exprContext,0)


        def expr(self):
            return self.getTypedRuleContext(PAMParser.ExprContext,0)


        def getRuleIndex(self):
            return PAMParser.RULE_assign_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_stmt" ):
                listener.enterAssign_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_stmt" ):
                listener.exitAssign_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_stmt" ):
                return visitor.visitAssign_stmt(self)
            else:
                return visitor.visitChildren(self)




    def assign_stmt(self):

        localctx = PAMParser.Assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assign_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(PAMParser.VARNAME)
            self.state = 57
            self.match(PAMParser.T__3)
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 58
                self.logical_expr()
                pass

            elif la_ == 2:
                self.state = 59
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cond_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def series(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PAMParser.SeriesContext)
            else:
                return self.getTypedRuleContext(PAMParser.SeriesContext,i)


        def logical_expr(self):
            return self.getTypedRuleContext(PAMParser.Logical_exprContext,0)


        def getRuleIndex(self):
            return PAMParser.RULE_cond_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond_stmt" ):
                listener.enterCond_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond_stmt" ):
                listener.exitCond_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond_stmt" ):
                return visitor.visitCond_stmt(self)
            else:
                return visitor.visitChildren(self)




    def cond_stmt(self):

        localctx = PAMParser.Cond_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cond_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(PAMParser.T__4)

            self.state = 63
            self.logical_expr()
            self.state = 64
            self.match(PAMParser.T__5)
            self.state = 65
            self.series()
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PAMParser.T__6:
                self.state = 66
                self.match(PAMParser.T__6)
                self.state = 67
                self.series()


            self.state = 70
            self.match(PAMParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def series(self):
            return self.getTypedRuleContext(PAMParser.SeriesContext,0)


        def logical_expr(self):
            return self.getTypedRuleContext(PAMParser.Logical_exprContext,0)


        def getRuleIndex(self):
            return PAMParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop" ):
                return visitor.visitLoop(self)
            else:
                return visitor.visitChildren(self)




    def loop(self):

        localctx = PAMParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(PAMParser.T__8)

            self.state = 73
            self.logical_expr()
            self.state = 74
            self.match(PAMParser.T__9)
            self.state = 75
            self.series()
            self.state = 76
            self.match(PAMParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PAMParser.ExprContext)
            else:
                return self.getTypedRuleContext(PAMParser.ExprContext,i)


        def RELATION(self):
            return self.getToken(PAMParser.RELATION, 0)

        def getRuleIndex(self):
            return PAMParser.RULE_compar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompar" ):
                listener.enterCompar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompar" ):
                listener.exitCompar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompar" ):
                return visitor.visitCompar(self)
            else:
                return visitor.visitChildren(self)




    def compar(self):

        localctx = PAMParser.ComparContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_compar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.expr()
            self.state = 79
            self.match(PAMParser.RELATION)
            self.state = 80
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(PAMParser.VARNAME)
            else:
                return self.getToken(PAMParser.VARNAME, i)

        def getRuleIndex(self):
            return PAMParser.RULE_varlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarlist" ):
                listener.enterVarlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarlist" ):
                listener.exitVarlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist" ):
                return visitor.visitVarlist(self)
            else:
                return visitor.visitChildren(self)




    def varlist(self):

        localctx = PAMParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_varlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(PAMParser.VARNAME)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PAMParser.T__11:
                self.state = 83
                self.match(PAMParser.T__11)
                self.state = 84
                self.match(PAMParser.VARNAME)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PAMParser.TermContext)
            else:
                return self.getTypedRuleContext(PAMParser.TermContext,i)


        def WEAKOP(self, i:int=None):
            if i is None:
                return self.getTokens(PAMParser.WEAKOP)
            else:
                return self.getToken(PAMParser.WEAKOP, i)

        def getRuleIndex(self):
            return PAMParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = PAMParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.term()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PAMParser.WEAKOP:
                self.state = 91
                self.match(PAMParser.WEAKOP)
                self.state = 92
                self.term()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PAMParser.ElemContext)
            else:
                return self.getTypedRuleContext(PAMParser.ElemContext,i)


        def STRONGOP(self, i:int=None):
            if i is None:
                return self.getTokens(PAMParser.STRONGOP)
            else:
                return self.getToken(PAMParser.STRONGOP, i)

        def getRuleIndex(self):
            return PAMParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = PAMParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.elem()
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PAMParser.STRONGOP:
                self.state = 99
                self.match(PAMParser.STRONGOP)
                self.state = 100
                self.elem()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(PAMParser.NUMBER, 0)

        def VARNAME(self):
            return self.getToken(PAMParser.VARNAME, 0)

        def expr(self):
            return self.getTypedRuleContext(PAMParser.ExprContext,0)


        def getRuleIndex(self):
            return PAMParser.RULE_elem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElem" ):
                listener.enterElem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElem" ):
                listener.exitElem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElem" ):
                return visitor.visitElem(self)
            else:
                return visitor.visitChildren(self)




    def elem(self):

        localctx = PAMParser.ElemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_elem)
        try:
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PAMParser.NUMBER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(PAMParser.NUMBER)
                pass
            elif token in [PAMParser.VARNAME]:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(PAMParser.VARNAME)
                pass
            elif token in [PAMParser.T__12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.match(PAMParser.T__12)
                self.state = 109
                self.expr()
                self.state = 110
                self.match(PAMParser.T__13)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logical_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PAMParser.Logical_termContext)
            else:
                return self.getTypedRuleContext(PAMParser.Logical_termContext,i)


        def WEAKBOOL(self, i:int=None):
            if i is None:
                return self.getTokens(PAMParser.WEAKBOOL)
            else:
                return self.getToken(PAMParser.WEAKBOOL, i)

        def getRuleIndex(self):
            return PAMParser.RULE_logical_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogical_expr" ):
                listener.enterLogical_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogical_expr" ):
                listener.exitLogical_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogical_expr" ):
                return visitor.visitLogical_expr(self)
            else:
                return visitor.visitChildren(self)




    def logical_expr(self):

        localctx = PAMParser.Logical_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_logical_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.logical_term()
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PAMParser.WEAKBOOL:
                self.state = 115
                self.match(PAMParser.WEAKBOOL)
                self.state = 116
                self.logical_term()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logical_elem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PAMParser.Logical_elemContext)
            else:
                return self.getTypedRuleContext(PAMParser.Logical_elemContext,i)


        def STRONGBOOL(self, i:int=None):
            if i is None:
                return self.getTokens(PAMParser.STRONGBOOL)
            else:
                return self.getToken(PAMParser.STRONGBOOL, i)

        def getRuleIndex(self):
            return PAMParser.RULE_logical_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogical_term" ):
                listener.enterLogical_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogical_term" ):
                listener.exitLogical_term(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogical_term" ):
                return visitor.visitLogical_term(self)
            else:
                return visitor.visitChildren(self)




    def logical_term(self):

        localctx = PAMParser.Logical_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_logical_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.logical_elem()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PAMParser.STRONGBOOL:
                self.state = 123
                self.match(PAMParser.STRONGBOOL)
                self.state = 124
                self.logical_elem()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_elemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compar(self):
            return self.getTypedRuleContext(PAMParser.ComparContext,0)


        def BOOL(self):
            return self.getToken(PAMParser.BOOL, 0)

        def VARNAME(self):
            return self.getToken(PAMParser.VARNAME, 0)

        def logical_expr(self):
            return self.getTypedRuleContext(PAMParser.Logical_exprContext,0)


        def NEG(self, i:int=None):
            if i is None:
                return self.getTokens(PAMParser.NEG)
            else:
                return self.getToken(PAMParser.NEG, i)

        def getRuleIndex(self):
            return PAMParser.RULE_logical_elem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogical_elem" ):
                listener.enterLogical_elem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogical_elem" ):
                listener.exitLogical_elem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogical_elem" ):
                return visitor.visitLogical_elem(self)
            else:
                return visitor.visitChildren(self)




    def logical_elem(self):

        localctx = PAMParser.Logical_elemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_logical_elem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 130
                    self.match(PAMParser.NEG) 
                self.state = 135
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 136
                self.compar()
                pass

            elif la_ == 2:
                self.state = 137
                self.match(PAMParser.BOOL)
                pass

            elif la_ == 3:
                self.state = 138
                self.match(PAMParser.VARNAME)
                pass

            elif la_ == 4:
                self.state = 139
                self.match(PAMParser.T__12)
                self.state = 140
                self.logical_expr()
                self.state = 141
                self.match(PAMParser.T__13)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





